# langchain-chat

./: .env.example  .gitignore  README.md  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  pyproject.toml
config/: logging.yaml  presets.yaml
docs/: ai_usage_log.md  architecture.md
docs/ai_conversations/: step-01.md  step-02.md  step-03.md  step-04.md  step-05-fix-a.md  step-05-fix-b.md  step-05.md  step-06.md  step-07.md  step-08.md  step-09.md  step-10.md  step-11.md  step-12.md  step-13.md  step-14.md  step-15.md
examples/: __init__.py  example1_http.py  example2_openai_sdk.py  example3_langchain.py
scripts/: init_db.py  test_chat_engine.py
src/: __init__.py  main.py
src/core/: chat_engine.py  config_manager.py  logging_utils.py  preset_manager.py  session_manager.py  user_manager.py
src/interface/: __init__.py  ui_protocol.py
src/models/: schemas.py
src/storage/: __init__.py  base.py  factory.py  file_backend.py  mysql_backend.py  sqlite_backend.py
src/ui/: __init__.py
src/ui/tui/: __init__.py  app.py  chat_view.py  menu_view.py  widgets.py
tests/: __init__.py  conftest.py  test_chat_engine.py  test_chat_engine_core.py  test_config_manager.py  test_file_backend.py  test_mysql_backend.py  test_preset_manager.py  test_session_manager.py  test_session_manager_core.py  test_sqlite_backend.py  test_storage.py  test_user_manager.py
