[project]
name = "langchain-chat"
version = "0.1.0"
description = "基于 LangChain 的多轮会话系统（教学项目）"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
