[project]
name = "langchain-chat"
version = "0.1.0"
description = "基于 LangChain 的多轮会话系统（教学项目）"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "openai>=2.45.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
